<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="50dp">

            <FrameLayout
                android:id="@+id/player_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

    </ScrollView>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/previous_step"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next_step"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimaryDark"/>

        </LinearLayout>

</RelativeLayout>